--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1313,17 +1313,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\varun\\AppData\\Local\\Temp\\ipykernel_11280\\4185903411.py:17: DeprecationWarning: *scatter_mapbox* is deprecated! Use *scatter_map* instead. Learn more at: https://plotly.com/python/mapbox-to-maplibre/\n",
-      "  fig = px.scatter_mapbox(df, lat=\"latitude\", lon=\"longitude\", hover_name=\"city\",\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -1370,8 +1362,8 @@
          "mode": "markers",
          "name": "",
          "showlegend": false,
-         "subplot": "mapbox",
-         "type": "scattermapbox"
+         "subplot": "map",
+         "type": "scattermap"
         }
        ],
        "layout": {
@@ -1428,10 +1420,10 @@
          "itemsizing": "constant",
          "tracegroupgap": 0
         },
-        "mapbox": {
+        "map": {
          "center": {
-          "lat": 37.5,
-          "lon": -119.5
+          "lat": 35.75444,
+          "lon": -119.4064
          },
          "domain": {
           "x": [
@@ -1442,6 +1434,13 @@
            0,
            1
           ]
+         },
+         "zoom": 6
+        },
+        "mapbox": {
+         "center": {
+          "lat": 37.5,
+          "lon": -119.5
          },
          "style": "carto-positron",
          "zoom": 6
@@ -2249,7 +2248,7 @@
     "df = pd.DataFrame(data)\n",
     "\n",
     "# Set up the map with Plotly Express\n",
-    "fig = px.scatter_mapbox(df, lat=\"latitude\", lon=\"longitude\", hover_name=\"city\", \n",
+    "fig = px.scatter_map(df, lat=\"latitude\", lon=\"longitude\", hover_name=\"city\", \n",
     "                        hover_data=[\"population\"], color=\"population\", size=\"population\", \n",
     "                        size_max=20, zoom=6, title=\"Scatter Plot on California Map\")\n",
     "\n",
@@ -2928,7 +2927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2936,7 +2935,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook notebook.ipynb to python\n",
-      "[NbConvertApp] Writing 14706 bytes to notebook.py\n"
+      "[NbConvertApp] Writing 15502 bytes to notebook.py\n"
      ]
     }
    ],
