--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1317,6 +1317,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\varun\\AppData\\Local\\Temp\\ipykernel_25868\\3784286758.py:16: DeprecationWarning: *scatter_mapbox* is deprecated! Use *scatter_map* instead. Learn more at: https://plotly.com/python/mapbox-to-maplibre/\n",
+      "  fig = px.scatter_mapbox(df, lat=\"latitude\", lon=\"longitude\", hover_name=\"city\",\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
@@ -1362,8 +1370,8 @@
          "mode": "markers",
          "name": "",
          "showlegend": false,
-         "subplot": "map",
-         "type": "scattermap"
+         "subplot": "mapbox",
+         "type": "scattermapbox"
         }
        ],
        "layout": {
@@ -1420,10 +1428,10 @@
          "itemsizing": "constant",
          "tracegroupgap": 0
         },
-        "map": {
+        "mapbox": {
          "center": {
-          "lat": 35.75444,
-          "lon": -119.4064
+          "lat": 37.5,
+          "lon": -119.5
          },
          "domain": {
           "x": [
@@ -1434,13 +1442,6 @@
            0,
            1
           ]
-         },
-         "zoom": 6
-        },
-        "mapbox": {
-         "center": {
-          "lat": 37.5,
-          "lon": -119.5
          },
          "style": "carto-positron",
          "zoom": 6
@@ -2237,17 +2238,17 @@
     "import pandas as pd\n",
     "\n",
     "data = {\n",
-    "    \"latitude\": [34.0522, 36.7783, 37.7749, 34.0522, 36.1146],  # Example latitudes for cities in California\n",
-    "    \"longitude\": [-118.2437, -119.4179, -122.4194, -118.2437, -118.7073],  # Example longitudes\n",
-    "    \"city\": [\"Los Angeles\", \"California\", \"San Francisco\", \"Los Angeles\", \"San Diego\"],  # City names\n",
-    "    \"population\": [4000000, 39500000, 880000, 4000000, 1500000]  # Example populations\n",
+    "    \"latitude\": [34.0522, 36.7783, 37.7749, 34.0522, 36.1146],  \n",
+    "    \"longitude\": [-118.2437, -119.4179, -122.4194, -118.2437, -118.7073],  \n",
+    "    \"city\": [\"Los Angeles\", \"California\", \"San Francisco\", \"Los Angeles\", \"San Diego\"],  \n",
+    "    \"population\": [4000000, 39500000, 880000, 4000000, 1500000]  \n",
     "}\n",
     "\n",
     "# Create a DataFrame\n",
     "df = pd.DataFrame(data)\n",
     "\n",
     "# Set up the map with Plotly Express\n",
-    "fig = px.scatter_map(df, lat=\"latitude\", lon=\"longitude\", hover_name=\"city\", \n",
+    "fig = px.scatter_mapbox(df, lat=\"latitude\", lon=\"longitude\", hover_name=\"city\", \n",
     "                        hover_data=[\"population\"], color=\"population\", size=\"population\", \n",
     "                        size_max=20, zoom=6, title=\"Scatter Plot on California Map\")\n",
     "\n",
