--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -887,19 +887,19 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Longitude:          💻:\n",
-    "Latitude:           💻:\n",
-    "Housing Median Age: 💻:\n",
-    "Total Rooms:        💻:\n",
-    "Total Bedrooms:     💻:\n",
-    "Population:         💻:\n",
-    "Households:         💻:\n",
-    "Median Income:      💻:\n",
-    "Median House Value: 💻:\n",
-    "Ocean Proximity:    💻:"
+    "- Longitude:          💻: Numerical - Continous\n",
+    "- Latitude:           💻: Numerical - Continous\n",
+    "- Housing Median Age: 💻: Numerical - Discrete\n",
+    "- Total Rooms:        💻: Numerical - Discrete\n",
+    "- Total Bedrooms:     💻: Numerical - Discrete\n",
+    "- Population:         💻: Numerical - Discrete\n",
+    "- Households:         💻: Numerical - Discrete\n",
+    "- Median Income:      💻: Numerical - Continous\n",
+    "- Median House Value: 💻: Numerical - Continous\n",
+    "- Ocean Proximity:    💻: Categorical - Nominal"
    ]
   },
   {
